--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,40 @@
   <title>Document</title>
 
 </head>
+
 <body>
+
+  <header>
+
+    <div class="container-sm">
+
+      <div class="row">
+
+        <div class="col-6">
+          <h1>START BOOTSTRAP</h1>
+        </div>
+
+        <div class="d-none d-lg-flex col-lg-6">
+          <ul class="d-flex">
+            <li><a href="#">PORTFOLIO</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTACT</a></li>            
+          </ul>
+        </div>
+
+        <div class="col-6 d-lg-none">H</div>
+
+      </div>
+
+    </div>   
+
+  </header>
+
+  <div class="jumbotron"></div>
+
+  <main></main>
+
+  <footer></footer>
 
   
 
