--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav>
 
-      <div class="sc-container ">
+      <div class="sc-container">
 
         <div class="container-fluid">
   
@@ -51,11 +51,11 @@
 
   <div class="sc-jumbotron p-5">
 
-    <div class="_immage">
+    <div class="sc-immage">
       <img src="" alt="">
     </div>
 
-    <div class="_text p-4">
+    <div class="sc-text p-4">
       <h2>START BOOTSTRAP</h2>
 
       <!-- LINE -->
@@ -70,7 +70,7 @@
 
     <section id="portfolio">
 
-      <div class="container sc-container">
+      <div class="container sc-container p-4">
 
         <h2>PORTFOLIO</h2>
 
@@ -108,11 +108,11 @@
 
     <section id="about">
 
-      
-      <div class="container">
+      <div class="container p-4">
+
         <h2>ABOUT</h2>
         <div class="row row-cols-1 row-cols-md-2">
-          <div class="col ">
+          <div class="col">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aliquid, similique corporis aut possimus doloribus ut quasi asperiores unde atque ipsam, voluptatum tempore voluptatibus, eveniet explicabo consequuntur debitis sequi perspiciatis?
             </p>
@@ -133,7 +133,7 @@
 
     <section id="contact">
       
-      <div class="container ">
+      <div class="container p-4">
 
         <h2>CONTACT ME</h2>
 
