--- a/index.html
+++ b/index.html
@@ -274,24 +274,24 @@
 
       <div class="container h-100 ">
 
-        <div class="row row-cols-1 row-cols-md-3 d-flex h-100 align-items-baseline">
+        <div class="row row-cols-1 row-cols-md-3 d-flex h-100 align-items-baseline text-center">
 
-          <div class="col text-uppercase h-100">
-            <h3>location</h3>
+          <div class="col h-100">
+            <h3 class="text-uppercase">location</h3>
             <p>2215 John Danniel Drive Clark, MO 54243</p>
           </div>
 
-          <div class="col text-uppercase h-100 pb-3">
-            <h3>around the web</h3>
+          <div class="col h-100 pb-3">
+            <h3 class="text-uppercase">around the web</h3>
             <a href="#"><i class="bi bi-facebook"></i></a>
             <a href="#"><i class="bi bi-google"></i></a>
             <a href="#"><i class="bi bi-twitter "></i></a>
             <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
 
-          <div class="col text-uppercase h-100 ">
-            <h3>About freelancer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing. <a href="#">Start Bootstrap</a></p>
+          <div class="col h-100 ">
+            <h3 class="text-uppercase">About freelancer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing <a href="#" id="start">Start Bootstrap</a>.</p>
           </div>
 
         </div>
